--- a/scss/_box-div.scss
+++ b/scss/_box-div.scss
@@ -1,6 +1,10 @@
 .blank-container {
-  height: 50vh;
+  height: 45vh;
   width: 100%;
+  @media screen and (max-width: 480px) {
+    height: 85vh;
+    width: 100%;
+  }
 }
 
 .box__div {
@@ -8,97 +12,203 @@
   height: 40vh;
   position: relative;
   display: flex;
-  .box__1 {
-    &::before {
-      content: "spplae";
-      width: 25em;
-      height: 15em;
-      position: absolute;
-      background-color: blue;
-      left: 20em;
-      z-index: 100;
-      bottom: 15em;
-    }
-    &::after {
-      content: "";
-      background-image: url(/images/group.svg);
-      background-size: 10em 20em;
-      position: absolute;
-      width: 10em;
+  /* background-color: lightgray; */
+  // margin-left: 0.5%;
+  margin-top: 5em;
+  .res-1 {
+    .box__1 {
+      width: 30em;
       height: 20em;
-      left: 20em;
-      z-index: 1000;
-      bottom: 15em;
+      position: absolute;
+      background-color: #4169e1;
+      left: 32em;
+      z-index: 100;
+      bottom: 5em;
+      a {
+        display: block;
+        height: 100%;
+        width: 100%;
+
+        p {
+          color: white;
+          font-size: 2rem;
+          position: absolute;
+          left: 50%;
+          top: 70%;
+          transform: translate(-50%, -50%);
+        }
+        .ab_img {
+          width: 80px;
+          position: absolute;
+          left: 50%;
+          top: 40%;
+          transform: translate(-50%, -50%);
+          //height: 100%;
+        }
+      }
+    }
+
+    .box__1:hover {
+      background-color: rgb(42, 88, 226);
+    }
+
+    .box__2 {
+      width: 30em;
+      height: 20em;
+      position: absolute;
+      background-color: rgba($color: #e4e4e4, $alpha: 1);
+      left: 62em;
+      z-index: 100;
+      bottom: 5em;
+
+      a {
+        display: block;
+        height: 100%;
+        width: 100%;
+
+        p {
+          color: black;
+          font-size: 2rem;
+          position: absolute;
+          left: 50%;
+          top: 70%;
+          transform: translate(-50%, -50%);
+        }
+        .adm_img {
+          width: 80px;
+          position: absolute;
+          left: 50%;
+          top: 40%;
+          transform: translate(-50%, -50%);
+          //height: 100%;
+        }
+      }
+    }
+
+    .box__2:hover {
+      background-color: white;
     }
   }
 
-  .box__2 {
-    &::before {
-      content: "spplae";
-      width: 25em;
-      height: 15em;
-      position: absolute;
-      background-color: red;
-      left: 45em;
-      z-index: 100;
-      bottom: 15em;
-    }
-    &::after {
-      content: "";
-      background-image: url(/images/group.svg);
-      background-size: 10em 20em;
-      position: absolute;
-      width: 10em;
+  .res-2 {
+    .box__3 {
+      width: 30em;
       height: 20em;
-      left: 45em;
-      z-index: 1000;
-      bottom: 15em;
+      position: absolute;
+      background-color: #4169e1;
+      left: 92em;
+      z-index: 100;
+      bottom: 5em;
+      a {
+        display: block;
+        height: 100%;
+        width: 100%;
+
+        p {
+          color: white;
+          font-size: 2rem;
+          position: absolute;
+          left: 50%;
+          top: 70%;
+          transform: translate(-50%, -50%);
+        }
+        .cu_img {
+          width: 80px;
+          position: absolute;
+          left: 50%;
+          top: 40%;
+          transform: translate(-50%, -50%);
+          //height: 100%;
+        }
+      }
+    }
+
+    .box__3:hover {
+      background-color: rgb(42, 88, 226);
+    }
+
+    .box__4 {
+      width: 30em;
+      height: 20em;
+      position: absolute;
+      background-color: rgba($color: #e4e4e4, $alpha: 1);
+      left: 122em;
+      z-index: 100;
+      bottom: 5em;
+
+      a {
+        display: block;
+        height: 100%;
+        width: 100%;
+
+        p {
+          color: black;
+          font-size: 2rem;
+          position: absolute;
+          left: 50%;
+          top: 70%;
+          transform: translate(-50%, -50%);
+        }
+        .ga_img {
+          width: 80px;
+          position: absolute;
+          left: 50%;
+          top: 40%;
+          transform: translate(-50%, -50%);
+          //height: 100%;
+        }
+      }
+    }
+
+    .box__4:hover {
+      background-color: white;
     }
   }
-  .box__3 {
-    &::before {
-      content: "spplae";
-      width: 25em;
-      height: 15em;
-      position: absolute;
-      background-color: blue;
-      left: 70em;
-      z-index: 100;
-      bottom: 15em;
+}
+
+@media screen and (max-width: 480px) {
+  .box__div {
+    display: flex;
+    flex-direction: column;
+    /* background-color: lightgray; */
+    .res-1 {
+      .box__1 {
+        width: 180px;
+        height: 185px;
+        left: 5px;
+      }
+
+      .box__2 {
+        width: 185px;
+        height: 185px;
+        left: 185px;
+      }
     }
-    &::after {
-      content: "";
-      background-image: url(/images/group.svg);
-      background-size: 10em 20em;
-      position: absolute;
-      width: 10em;
-      height: 20em;
-      left: 70em;
-      z-index: 1000;
-      bottom: 15em;
-    }
-  }
-  .box__4 {
-    &::before {
-      content: "spplae";
-      width: 25em;
-      height: 15em;
-      position: absolute;
-      background-color: red;
-      left: 95em;
-      z-index: 100;
-      bottom: 15em;
-    }
-    &::after {
-      content: "";
-      background-image: url(/images/group.svg);
-      background-size: 10em 20em;
-      position: absolute;
-      width: 10em;
-      height: 20em;
-      left: 95em;
-      z-index: 1000;
-      bottom: 15em;
+
+    .res-2 {
+      .box__3 {
+        width: 185px;
+        height: 205px;
+        left: 185px;
+        top: 215px;
+        background-color: #4169e1;
+      }
+
+      .box__4 {
+        width: 180px;
+        height: 205px;
+        left: 5px;
+        top: 215px;
+
+        background-color: rgba($color: #e4e4e4, $alpha: 1);
+      }
     }
   }
+}
+
+//////////////////////////////
+
+.asa {
+  height: 70vh;
+  width: 100%;
 }
