--- a/scss/_counter.scss
+++ b/scss/_counter.scss
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: space-around;
   height: 25em;
+  width: 100%;
+  /* margin-top: 150px; */
   /* padding-bottom: 5rem; */
 
   &_img {
@@ -27,21 +29,26 @@
     color: white;
     display: flex;
     flex-direction: column;
+    height: 75%;
 
     &_n {
       font-size: 5rem;
       font-weight: 400;
+      /* width: 100%; */
+      text-align: center;
     }
 
     &_line {
       width: 12.5rem;
       height: 7rem;
+      /* width: 100%; */
       transform: rotate(45deg);
     }
     &_t {
       padding-left: 1rem;
       font-size: 2rem;
       font-weight: 50;
+      /* text-align: center; */
     }
   }
 
@@ -90,6 +97,63 @@
       padding-left: 1rem;
       font-size: 2rem;
       font-weight: 50;
+    }
+  }
+
+  @media screen and (max-width: 480px) {
+    height: 16em;
+    width: 100%;
+    margin-top: 90px;
+
+    .students {
+      height: auto;
+      &_n {
+        font-size: 2rem;
+        font-weight: 400;
+        text-align: center;
+      }
+
+      &_line {
+        display: none;
+      }
+      &_t {
+        padding-left: 0.25rem;
+        font-size: 1rem;
+        font-weight: 500;
+      }
+    }
+    .faculty {
+      height: auto;
+      &_n {
+        font-size: 2rem;
+        font-weight: 400;
+      }
+
+      &_line {
+        display: none;
+      }
+      &_t {
+        padding-left: 0;
+        font-size: 1rem;
+        font-weight: 500;
+      }
+    }
+
+    .staff {
+      height: auto;
+      &_n {
+        font-size: 2rem;
+        font-weight: 400;
+      }
+
+      &_line {
+        display: none;
+      }
+      &_t {
+        padding-left: 0;
+        font-size: 1rem;
+        font-weight: 500;
+      }
     }
   }
 }
