--- a/scss/_faq.scss
+++ b/scss/_faq.scss
@@ -11,6 +11,11 @@
 
     /*  left: 78.5rem; */
   }
+
+  @media screen and (max-width: 480px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 /* FAQ */
@@ -22,7 +27,7 @@
   word-spacing: 1px;
   font-size: 2rem;
   /* margin: 5rem; */
-  margin-left: 17rem;
+  margin-left: 15%;
   width: 45%;
   font-family: "Nunito", sans-serif;
   position: relative;
@@ -30,12 +35,14 @@
   margin-top: 15rem;
 
   .faq_group {
+    width: 100%;
+    /* height: 15rem; */
     .faq_name {
       position: absolute;
       /* padding- */
       left: 15rem;
       /* top: 5rem; */
-      font-size: 10rem;
+      font-size: 14rem;
       font-weight: 600;
       opacity: 0.2;
       /* padding- */
@@ -47,14 +54,14 @@
       width: 7rem;
       opacity: 0.2;
       position: absolute;
-      top: -3rem;
-      left: 41rem;
+      /* top: -3rem; */
+      left: 52rem;
     }
   }
 }
 
 .Accordion {
-  padding-top: 15rem;
+  padding-top: 25rem;
   padding-bottom: 6rem;
 
   &__tabs {
@@ -137,5 +144,51 @@
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #wave {
+    display: none;
+  }
+
+  .faq {
+    background-color: white;
+    color: black;
+    letter-spacing: 2px;
+    word-spacing: 1px;
+    font-size: 2rem;
+    margin-left: 0rem;
+    width: 100%;
+    font-family: "Nunito", sans-serif;
+    position: relative;
+    margin-top: 4rem;
+    .faq_group {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: 15rem;
+      .faq_name {
+        position: absolute;
+        left: 0;
+        font-size: 10rem;
+        font-weight: 600;
+        opacity: 0.2;
+        margin-left: 4rem;
+      }
+      img {
+        height: 5rem;
+        width: 5rem;
+        opacity: 0.2;
+        position: absolute;
+        /* top: -3rem; */
+        left: 30rem;
+      }
+    }
+  }
+
+  .Accordion {
+    padding-top: 5rem;
+    padding-bottom: 0rem;
   }
 }
