--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,14 +1,2 @@
-/* Nunito */
-@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
-
-/* Aquafina */
-@import url("https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Marck+Script&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
-
-@font-face {
-  font-family: "Segoe";
-  src: url("/fonts/Segoe\ UI.woff");
-}
+///// Poppins /////
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
