--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,14 @@
-@import "variable";
-@import "mixins";
-
 @import "global";
 @import "header";
+@import "variables";
 @import "slider";
+@import "animations";
 @import "navbar";
 @import "box-div";
 @import "news-a";
-@import "event";
+@import "four-btn";
+@import "events";
 @import "counter";
 @import "faq";
 @import "gallery";
 @import "footer";
-@import "animation";
-@import "fonts";
